Dashboard.cydsn/REBUILD.log
--------------- Rebuild Started: 03/05/2020 15:56:47 Project: Dashboard, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ugui.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ugui_SSD1963.o"
Deleting file ".\Dashboard.cycdx"
Deleting file ".\Dashboard.svd"
Deleting file ".\Dashboard.rpt"
Deleting file ".\Dashboard_timing.html"
cydsfit.exe -.appdatapath "C:\Users\ianrd\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\cygwin\home\ianrd\FRUCD-Dashboard\Dashboard.cydsn\Dashboard.cyprj -d CY8C5868AXI-LP035 -s C:\cygwin\home\ianrd\FRUCD-Dashboard\Dashboard.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: sdb.M0060: warning: Warning in component: CAN. The BUS_CLK clock accuracy should be 0.5% or better. Please, use an external XTAL or external clock source to meet the CAN accurate clocking requirements.
 * C:\cygwin\home\ianrd\FRUCD-Dashboard\Dashboard.cydsn\TopDesign\TopDesign.cysch (Instance:CAN)
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 14 pin(s) will be assigned a location by the fitter: LED(0), LED_1(0), RGB1_2(0), RGB2_2(0), RGB3_2(0), SD(0), SD(1), SD(2), SD(3), SD(4), SD(5), SD(6), SD(7), WDT_Reset(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/ugui.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c ugui.c -o .\CortexM3\ARM_GCC_541\Debug\ugui.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/ugui_SSD1963.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c ugui_SSD1963.c -o .\CortexM3\ARM_GCC_541\Debug\ugui_SSD1963.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:258:5: warning: implicit declaration of function 'libTFT_Start_TFT' [-Wimplicit-function-declaration]
     libTFT_Start_TFT();
     ^
main.c:297:17: warning: implicit declaration of function 'libTFT_ClearScreen' [-Wimplicit-function-declaration]
                 libTFT_ClearScreen();
                 ^
main.c:299:21: warning: implicit declaration of function 'libTFT_DrawString' [-Wimplicit-function-declaration]
                     libTFT_DrawString("START",0,0,8,BLACK, Font16x16);
                     ^
main.c:299:53: error: 'BLACK' undeclared (first use in this function)
                     libTFT_DrawString("START",0,0,8,BLACK, Font16x16);
                                                     ^
main.c:299:53: note: each undeclared identifier is reported only once for each function it appears in
main.c:353:27: error: 'YELLOW' undeclared (first use in this function)
                 LED_color(YELLOW);
                           ^
main.c:382:27: error: 'MAGENTA' undeclared (first use in this function)
                 LED_color(MAGENTA);
                           ^
main.c:436:27: error: 'BLUE' undeclared (first use in this function)
                 LED_color(BLUE);
                           ^
main.c:512:27: error: 'GREEN' undeclared (first use in this function)
                 LED_color(GREEN);
                           ^
main.c:583:27: error: 'RED' undeclared (first use in this function)
                 LED_color(RED);
                           ^
main.c:594:17: warning: implicit declaration of function 'libTFT_DrawInt' [-Wimplicit-function-declaration]
                 libTFT_DrawInt(error_state,80,32,2,BLACK, Font16x16);
                 ^
main.c:597:23: warning: unused variable 'bms_f' [-Wunused-variable]
                 char* bms_f;
                       ^
main.c:523:25: warning: unused variable 'ABS_Motor_RPM' [-Wunused-variable]
                 uint8_t ABS_Motor_RPM = getABSMotorRPM();
                         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
main.c:250:12: warning: unused variable 'direction' [-Wunused-variable]
     int8_t direction=1;
            ^
main.c:249:13: warning: unused variable 'value' [-Wunused-variable]
     uint8_t value=0; // replace the value with 
             ^
main.c:230:14: warning: variable 'color' set but not used [-Wunused-but-set-variable]
     UG_COLOR color[3];
              ^
main.c: At top level:
main.c:192:15: warning: 'ReadSwSwitch' declared 'static' but never defined [-Wunused-function]
 static uint32 ReadSwSwitch(void);
               ^
--------------- Rebuild Failed: 03/05/2020 15:57:12 ---------------
